refactor: update device registration process to use API Gateway and DTO